<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search_name">Поиск</string>
    <string name="music_name">Медиатека</string>
    <string name="playlists">Плейлисты</string>
    <string name="favorites">Избранные треки</string>
    <string name="create_playlist">Новый плейлист</string>
    <string name="stub_playlists">Вы не создали \nни одного плейлиста</string>
    <string name="stub_favorites">Ваша медиатека пуста</string>
    <string name="settings_name">Настройки</string>
    <string name="dark_theme_name">Темная тема</string>
    <string name="share_the_app_name">Поделиться приложением</string>
    <string name="write_to_support_name">Написать в поддержку</string>
    <string name="user_agreement_name">Пользовательское соглашение</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="back_name">Назад</string>
    <string name="update">Обновить</string>
    <string name="nothing_was_found">Ничего не нашлось</string>
    <string name="communication_problems">Проблемы со связью \n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="switch_theme_description">Переключить тему</string>
    <string name="email">zazazlikxxx@gmail.com</string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="thanks">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="message">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="share_the_app_name_text">Посмотрите этот замечательный курс по Андроид-разработке: https://practicum.yandex.ru/</string>
    <string name="app_name_trek">YourAppName</string>
    <string name="search_name_trek">Search Name</string>
    <string name="track_duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="save_track">Сохранить трек</string>
    <string name="play">Проигрыватель</string>
    <string name="time_to_lose">Контроля воспроизведения</string>
    <string name="like_track">Отметить понравившейся</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create">Создать</string>
    <string name="finish_playlist_creation">Завершить создание плейлиста?</string>
    <string name="unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="playlist_created">Плейлист %1$s создан</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="track_already_in_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="playlist_title">Плейлист</string>
    <string name="playlist_menu">Меню плейлиста</string>
    <plurals name="tracks_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d трека</item>
    </plurals>
    <plurals name="minutes_count">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минуты</item>
    </plurals>
    <string name="empty_playlist_tracks">В этом плейлисте нет треков</string>
    <string name="delete_track">Удалить трек</string>
    <string name="delete_track_question">Хотите удалить трек?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_playlist_question">Хотите удалить плейлист?</string>
    <string name="share_playlist">Поделиться</string>
    <string name="edit_playlist_info">Редактировать информацию</string>
    <string name="no_tracks_to_share">В данном плейлисте нет списка треков, которым можно поделиться</string>
    <string name="save">Сохранить</string>
    <string name="edit_playlist">Редактирование плейлиста</string>
</resources>
