<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start|center_vertical"
        android:paddingTop="@dimen/padding_ten"
        android:paddingLeft="@dimen/padding_large">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_west_24"
            android:contentDescription="@string/back_name"
            android:padding="@dimen/padding_large"
            android:background="@android:color/transparent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_name"
            android:textSize="@dimen/text_size_twenty_two"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="@dimen/thirty"
        android:paddingStart="@dimen/padding_large"
        android:paddingEnd="@dimen/padding_large" >

        <TextView
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme_name"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_normal"
            android:layout_weight="1" />

        <Switch
            android:id="@+id/switch_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/forty_eight"
            android:minHeight="@dimen/fifty_six"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/btn_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/baseline_share_24"
        android:padding="@dimen/padding_large"
        android:text="@string/share_the_app_name"
        android:textSize="@dimen/text_size_normal" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/btn_support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/baseline_support_agent_24"
        android:padding="@dimen/padding_large"
        android:text="@string/write_to_support_name"
        android:textSize="@dimen/text_size_normal" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/btn_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/baseline_play_arrow_24"
        android:padding="@dimen/padding_large"
        android:text="@string/user_agreement_name"
        android:textSize="@dimen/text_size_normal" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:baselineAligned="false">

        <TextView
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/baseline_search_24"
            android:drawablePadding="@dimen/padding_small"
            android:text="@string/search_name"
            android:textSize="@dimen/text_size_normal"
            android:gravity="center"
            android:contentDescription="@string/search_name" />

        <TextView
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/baseline_audio_file_24"
            android:drawablePadding="@dimen/padding_small"
            android:text="@string/music_name"
            android:textSize="@dimen/text_size_normal"
            android:gravity="center"
            android:contentDescription="@string/music_name" />

        <TextView
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/baseline_settings_24"
            android:drawablePadding="@dimen/padding_small"
            android:text="@string/settings_name"
            android:textSize="@dimen/text_size_normal"
            android:gravity="center"
            android:contentDescription="@string/settings_name" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/padding_large"
        android:layout_height="@dimen/zero"/>

</LinearLayout>