<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:padding="@dimen/padding_twenty">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_twenty_six" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/twenty_four"
        app:cornerRadius="@dimen/padding_large"
        android:text="@string/search_name"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_twenty_two"
        android:textStyle="bold"
        android:backgroundTint="@color/white"
        android:foreground="?attr/selectableItemBackground"
        app:icon="@drawable/baseline_search_24"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/padding_ten"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/button_media"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/padding_twenty"
        app:cornerRadius="@dimen/padding_large"
        android:text="@string/music_name"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_twenty_two"
        android:textStyle="bold"
        android:backgroundTint="@color/white"
        android:foreground="?attr/selectableItemBackground"
        app:icon="@drawable/baseline_audio_file_24"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/padding_ten"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/padding_twenty"
        app:cornerRadius="@dimen/padding_large"
        android:text="@string/settings_name"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_twenty_two"
        android:textStyle="bold"
        android:backgroundTint="@color/white"
        android:foreground="?attr/selectableItemBackground"
        app:icon="@drawable/baseline_settings_24"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/padding_ten"
        app:iconTint="@color/black" />

</LinearLayout>